--- a/index.html
+++ b/index.html
@@ -64,8 +64,13 @@
                             <div id="arrow"><i class="ri-arrow-right-line"></i></div>
                         </div>
                 </div>
+                <div id="lower">
+                    <h1>Where style <br>endures:timeless <br>furniture for <br>
+                    your story</h1>
+                    <div id="box"></div>
+                </div>
             </div>
-            <video src="https://videos.ctfassets.net/tuohjudwxvzs/63NXWxKzgcVQtMocb9VAjQ/9b2c36df742557dadeba6f5826982564/home_dmgpke.mp4" autoplay loop muted></video>
+            <video id="vdo" src="https://videos.ctfassets.net/tuohjudwxvzs/63NXWxKzgcVQtMocb9VAjQ/9b2c36df742557dadeba6f5826982564/home_dmgpke.mp4" autoplay loop muted></video>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
