--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h1 id="logo">Props</h1>
             <div id="centerNav">
                 <div id="lines">
-                    <div class="line"></div>
-                    <div class="line"></div>
+                    <div id="one" class="line"></div>
+                    <div id="two" class="line"></div>
                 </div>
                 <h4>Menu</h1>
             </div>
@@ -46,6 +46,18 @@
                     <i class="ri-shopping-cart-2-line"></i>
                     <h4>Cart (0)</h4>
                 </div>
+            </div>
+        </div>
+        <div id="navToggle">
+            <div id="options">
+                <div id="atags">
+                    <div class="at"><h1  id="home" href="">Home</h1></div>
+                    <div class="at"><h1 href="">Shop</h1></div>
+                    <div class="at"><h1 href="">About us</h1></div>
+                    <div class="at"><h1 href="">lookbook</h1></div>
+                    <div class="at"><h1 href="">contact</h1></div>
+                </div>
+                <div id="navImage"></div>
             </div>
         </div>
         <div id="video" class="page1">
@@ -65,8 +77,8 @@
                         </div>
                 </div>
                 <div id="lower">
-                    <h1>Where style <br>endures:timeless <br>furniture for <br>
-                    your story</h1>
+                    <!-- <h1>Where style <br>endures:timeless <br>furniture for <br>
+                    your story</h1> -->
                     <div id="box"></div>
                 </div>
             </div>
