--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <div id="navToggle">
             <div id="options">
                 <div id="atags">
-                    <div class="at"><h1  id="home" href="">Home</h1></div>
-                    <div class="at"><h1 href="">Shop</h1></div>
-                    <div class="at"><h1 href="">About us</h1></div>
-                    <div class="at"><h1 href="">lookbook</h1></div>
-                    <div class="at"><h1 href="">contact</h1></div>
+                    <div class="at"><h1 id="home"  localUrl="chairs_nemcam.png" href="https://images.ctfassets.net/tuohjudwxvzs/9Ff7V1JqJwu0cfYEJ4kWt/ef7b0e440769d005afdc9466fae600a0/chairs_nemcam.png">Home</h1></div>
+                    <div class="at"><h1 id="shop"  localUrl="hero.webp" href="https://props.studiolumio.com/tables.webp">Shop</h1></div>
+                    <div class="at"><h1 id="about" localUrl="lamps.webp" href="https://props.studiolumio.com/lamps.webp">About us</h1></div>
+                    <div class="at"><h1 id="lookbook" localUrl="lookbook.webp" href="https://props.studiolumio.com/lookbook.webp">lookbook</h1></div>
+                    <div class="at"><h1 id="contact" localUrl="tables.webp" href="https://props.studiolumio.com/hero.webp">contact</h1></div>
                 </div>
                 <div id="navImage"></div>
             </div>
@@ -87,6 +87,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
