nav page2 complete

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROPS</title>
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -76,18 +76,103 @@
                             <div id="arrow"><i class="ri-arrow-right-line"></i></div>
                         </div>
                 </div>
-                <div id="lower">
-                    <!-- <h1>Where style <br>endures:timeless <br>furniture for <br>
-                    your story</h1> -->
-                    <div id="box"></div>
+                <div data-scroll data-scroll-speed="5" id="lower">
+                    <h1>Where style <br>endures:timeless <br>furniture for <br>
+                    your story</h1>
+                    <div id="box">
+                        <div id="mid">
+                            <img src="https://props.studiolumio.com/props/pngwing_s1cg3x.png" alt="">
+                        </div>
+                        <div id="down">
+                            <h6>Comfy english chair -</h6>
+                            <h5>$800.00</h6>
+                        </div>
+                        <h4>Product of the day</h4>
+                    </div>
+                    <h2>product of the day</h2>
                 </div>
             </div>
             <video id="vdo" src="https://videos.ctfassets.net/tuohjudwxvzs/63NXWxKzgcVQtMocb9VAjQ/9b2c36df742557dadeba6f5826982564/home_dmgpke.mp4" autoplay loop muted></video>
         </div>
+        <div id="page2">
+            <div id="left2">
+                <img data-scroll data-scroll-offset="-100%" data-scroll-speed="2" id="img1" src="https://images.ctfassets.net/tuohjudwxvzs/65ny4U8lAazq9TaDLJ6hkC/b2fb5faa333f58b45dae5e782ed9aca4/about_fj2cja.png" alt="">
+                <img id="img2" data-scroll data-scroll-offset="-100%" data-scroll-speed="3" src="https://images.ctfassets.net/tuohjudwxvzs/718f4qr6MCNuII02jzFN8h/111a7ebb9cc3b633c792313184ece2fa/about-sm_toxebw.png" alt="">
+            </div>
+            <div id="right2">
+                <h1>WELCOME TO OUR FURNITURE SHOP, WHERE TIMELESS AND STYLISH DESIGNS MEET STORYTELLING.
+                </h1>
+                <h5>Every piece of furniture in our collection tells a personal story. Custom-designed and personalized to enhance your home's aesthetics.</h5>
+                <div id="button2">
+                    <div id="outer"><h4 id="f1">ABOUT US</h4><h4>ABOUT US</h4></div>
+                    <div id="arrow2"><i id="i1" class="ri-arrow-right-line"></i><i class="ri-arrow-right-line"></i></div>
+                </div>
+            </div>
+        </div>
+        <div id="page3">
+            <h1>FEATURED PRODUCTS</h1>
+            <div id="caseroll">
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_s1cg3x.png" alt=""></div>
+                    <h5>Curved oak chair -</h5>
+                    <h1>$900.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_bidg2o.png" alt=""></div>
+                    <h5>TInal dining chair -</h5>
+                    <h1>$290.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_hglcjj.png" alt=""></div>
+                    <h5>Coffee table -</h5>
+                    <h1>$940.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_hrpzfe.png" alt=""></div>
+                    <h5>designer glass table -</h5>
+                    <h1>$1800.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_m0s8vr.png" alt=""></div>
+                    <h5>comfy cushion chair -</h5>
+                    <h1>$1400.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_gcffyk.png" alt=""></div>
+                    <h5>pot table lamp -</h5>
+                    <h1>$200.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_fb1gf6.png" alt=""></div>
+                    <h5>Stack cushion chair -</h5>
+                    <h1>$1000.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_s1cg3x.png" alt=""></div>
+                    <h5>Curved oak chair -</h5>
+                    <h1>$900.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_bidg2o.png" alt=""></div>
+                    <h5>TInal dining chair -</h5>
+                    <h1>$290.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_hglcjj.png" alt=""></div>
+                    <h5>Coffee table -</h5>
+                    <h1>$940.00</h1>
+                </div>
+                <div class="card">
+                    <div id="photo"><img src="https://props.studiolumio.com/props/pngwing_hrpzfe.png" alt=""></div>
+                    <h5>designer glass table -</h5>
+                    <h1>$1800.00</h1>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <script src="script.js"></script>
 </body>
 </html>
